--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist = py27, py33, py34, py35, py36, lint, lint-py2, lint-py3
 
 [testenv]
 deps =
+    pip==9.0.3
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/requirements_dev.txt
 commands =
