--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-google-api-python-client>=1.6.1
-oauth2client>=1.5.0
-pycrypto>=2.6.1
-six>=1.10.0
+google-api-python-client==v1.7.4
+google-auth==1.5.1
+google-auth-httplib2==0.0.3
+six==1.11.0
