--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27, py33, py34, py35, py36, py37, lint, lint-py2, lint-py3
+envlist = py37, py38, py39, lint
 
 [testenv]
 deps =
@@ -10,13 +10,3 @@ commands =
 [testenv:lint]
 commands =
     flake8 hyou test tools setup.py
-
-[testenv:lint-py2]
-basepython = python2
-commands =
-    {[testenv:lint]commands}
-
-[testenv:lint-py3]
-basepython = python3
-commands =
-    {[testenv:lint]commands}
