[tests] Replace nose with pytest
Also: remove mock package as it's now part of the standard
library.

--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ envlist = py37, py38, py39, py310, lint
 deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
-    nosetests -v --nologcapture {posargs}
+    pytest -v --cov=hyou {posargs}
 
 [testenv:lint]
 commands =
