Replace setup files with pyproject.toml and poetry

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,17 @@
 [tox]
-envlist = py37, py38, py39, py310, lint
+envlist = py37, py38, py39, py310, lint, black
 
 [testenv]
-deps =
-    -r{toxinidir}/requirements_dev.txt
+allowlist_externals = poetry
+
 commands =
-    pytest -v --cov=hyou {posargs}
+    poetry install
+    poetry run pytest -v --cov=hyou {posargs}
+
+[testenv:black]
+commands =
+    poetry run black hyou test tools --check --diff
 
 [testenv:lint]
 commands =
-    flake8 hyou test tools setup.py
+    poetry run pylint hyou test tools
